got the program consistent with the Cxx version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@
 ## Author: Will Brandon <dev.willbrandon@gmail.com>
 ## Date:   Sat, Apr 13, 2024
 ##
-## Copyright © 2024 Will Brandon <dev.willbrandon@gmail.com>.
+## Copyright (c) Will Brandon, 2024.
 ##
 ## Builds the Python project.
 ##
