--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 ## Author: Will Brandon <dev.willbrandon@gmail.com>
 ## Date:   Mon, Jul 1, 2024
 ##
-## Copyright © 2024 Will Brandon <dev.willbrandon@gmail.com>.
+## Copyright (c) Will Brandon, 2024.
 ##
 ## Specifies patterns to ignore from Git version control.
 ##
@@ -22,7 +22,7 @@
 ########################################################################################################################
 
 
-######################################################## BUNPY #########################################################
+######################################################## PYTHON ########################################################
 # Python Caches, Builds, and Distributions
 __pycache__
 *.egg-info
