--- a/bunpack.yaml
+++ b/bunpack.yaml
@@ -4,7 +4,7 @@
 ## Author: Will Brandon <dev.willbrandon@gmail.com>
 ## Date:   Thu, Jul 4, 2024
 ##
-## Copyright © 2024 Will Brandon <dev.willbrandon@gmail.com>.
+## Copyright (c) Will Brandon, 2024.
 ##
 ## Defines the Bunucu package.
 ##
