--- a/.junpack/pack.yaml
+++ b/.junpack/pack.yaml
@@ -1,12 +1,12 @@
 ##
-## File:   bunpack.yaml
-## Type:   Bunucu Package Descriptor File
+## File:   pack.yaml
+## Type:   Juneaux Package Descriptor File
 ## Author: Will Brandon <dev.willbrandon@gmail.com>
 ## Date:   Thu, Jul 4, 2024
 ##
 ## Copyright (c) Will Brandon, 2024.
 ##
-## Defines the Bunucu package.
+## Defines the package.
 ##
 
 overview:
@@ -24,11 +24,11 @@ backend:
   git: 'git@github.com:will-brandon/FibonacciPy.git'
 
 build:
-  system: '@Bunucu/BuildSystem/PythonTOML>=1.0.0'
+  system: '@Juneaux/BuildSystem/PythonTOML>=1.0.0'
 
 deps:
   pack:
-   - '@Bunucu/Lib/BunPyCore>=1.0.0'
+   - '@Juneaux/Lib/JunBasePy>=1.0.0'
   tests:
-   - '@Bunucu/Lib/BunPyCore>=1.0.0'
-   - '@Bunucu/Lib/BunPyTest>=1.0.0'
+   - '@Juneaux/Lib/JunBasePy>=1.0.0'
+   - '@Juneaux/Lib/JunBasePy>=1.0.0'
